Event listeners for button clicks and arrow keys. 3 screens cycle when a b and c are pressed respectively

--- a/style.css
+++ b/style.css
@@ -5,10 +5,23 @@ body {
 }
 
 .wrapper {
-    max-width: 1200px; 
+    max-width: 70%; 
+    min-width: 50%;
     margin: 0 auto;    
     padding: 20px;     
     background-color: #f0f0f0; 
+}
+
+#mainwrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: auto;
+    margin: auto;
+    background-color: #f6f6f6;
+    place-content: center;
 }
 
 .buttonbox {
@@ -29,3 +42,17 @@ body {
     background-color: orange;
     color: red;
 }
+
+#startscreen {
+    max-height: 0px;
+    overflow: hidden;
+}
+#gamescreen {
+    max-height: 0px;
+    overflow: hidden;
+}
+#endscreen {
+    max-height: 0;
+    overflow: hidden;
+}
+
