--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+
 }
 
 .wrapper {
@@ -56,3 +57,8 @@ body {
     overflow: hidden;
 }
 
+.bar {
+    background-color: red;
+    height: 5px;
+    width: 100px;
+}
