--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center; 
+    text-align: center; 
 
 }
 
